fix double scrollbar (#236)

--- a/src/minimal/minimalStyle.less
+++ b/src/minimal/minimalStyle.less
@@ -1,3 +1,7 @@
+body::-webkit-scrollbar {
+    display: none !important;
+}
+
 #material .mdl-card__supporting-text{
   width: initial
 }
